crates/sol-types/tests/ui/var_def.stderr
error: invalid state variable type
  --> tests/ui/var_def.rs:18:37
   |
18 |     mapping(int => Complex1) public complexMap;
   |                                     ^^^^^^^^^^
